[gd_scene load_steps=7 format=3 uid="uid://cv7pv3yq6gra3"]

[ext_resource type="Script" uid="uid://dnhijbix3nsty" path="res://Tabs/Combat/combat_map.gd" id="1_y1sti"]
[ext_resource type="Texture2D" uid="uid://dyw5rcirem7mu" path="res://Images/CombatMap.png" id="2_fvq41"]
[ext_resource type="PackedScene" uid="uid://daiow51un2iat" path="res://Tabs/Combat/Encounters/room.tscn" id="3_i5oek"]
[ext_resource type="PackedScene" uid="uid://cscllstepqabg" path="res://Tabs/Combat/Encounters/connection.tscn" id="4_2xrem"]
[ext_resource type="Resource" uid="uid://dtnhhfri386lc" path="res://Tabs/Combat/Encounters/Room1.tres" id="4_8ac17"]
[ext_resource type="Resource" uid="uid://cvqkj6ljcwvab" path="res://Tabs/Combat/Encounters/boss.tres" id="6_glrae"]

[node name="CombatMap" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y1sti")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fvq41")

[node name="ConnectionContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Connection" parent="ConnectionContainer" node_paths=PackedStringArray("Room1", "Room2") instance=ExtResource("4_2xrem")]
visible = true
points = PackedVector2Array(909, 898, 897, 601)
Room1 = NodePath("../../RoomContainer/Room1")
Room2 = NodePath("../../RoomContainer/Room2")
visibilityOnStartup = 1

[node name="Connection2" parent="ConnectionContainer" node_paths=PackedStringArray("Room1", "Room2") instance=ExtResource("4_2xrem")]
visible = true
points = PackedVector2Array(1532, 593, 1032, 570)
Room1 = NodePath("../../RoomContainer/Room2")
Room2 = NodePath("../../RoomContainer/Room3")

[node name="RoomContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Room1" parent="RoomContainer" instance=ExtResource("3_i5oek")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.975
anchor_right = 0.5
anchor_bottom = 0.975
offset_left = -161.8
offset_top = -200.0
offset_right = 161.8
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0
hiddenName = "Room 1"
encounter = ExtResource("4_8ac17")
visibilityOnStartup = 2

[node name="Room2" parent="RoomContainer" instance=ExtResource("3_i5oek")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.55
anchor_right = 0.5
anchor_bottom = 0.55
offset_left = -161.8
offset_top = -100.0
offset_right = 161.8
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
hiddenName = "Room 2"
encounter = ExtResource("4_8ac17")
visibilityOnStartup = 1

[node name="Room3" parent="RoomContainer" instance=ExtResource("3_i5oek")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.85
anchor_top = 0.55
anchor_right = 0.85
anchor_bottom = 0.55
offset_left = -161.8
offset_top = -100.0
offset_right = 161.8
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
hiddenName = "Room3"
encounter = ExtResource("6_glrae")
